Improve compatibility with bootstrap 0.0.9

--- a/recipe1m/options/abstract.yaml
+++ b/recipe1m/options/abstract.yaml
@@ -29,7 +29,7 @@ model:
         activations:
             - tanh
             - normalize
-    criterion: NotImplemented
+    criterion: __NotImplemented__
     metric:
         name: trijoint
         retrieval_dir: /tmp/retrieval
