--- a/options/abstract.yaml
+++ b/options/abstract.yaml
@@ -41,8 +41,8 @@ optimizer:
     switch_epoch: 20
     lr: 0.0001
     #switch_step: 50000
-    batch_size_factor: # TODO remove?
-    clip_grad: 8.
+    #batch_size_factor: # TODO remove?
+    #clip_grad: 8.
 engine:
     name: logger
     nb_epochs: 80
