--- a/options/pairwise_plus.yaml
+++ b/options/pairwise_plus.yaml
@@ -1,6 +1,6 @@
 __include__: abstract.yaml
 exp:
-    dir: logs/recipe1m/pairwise
+    dir: logs/recipe1m/pairwise_plus
 dataset:
     freq_mismatch: 0.80
 model:
