--- a/options/lifted_struct.yaml
+++ b/options/lifted_struct.yaml
@@ -1,6 +1,6 @@
 __include__: abstract.yaml
 exp:
-    dir: logs/recipe1m/triplet
+    dir: logs/recipe1m/lifted_struct
 dataset:
     freq_mismatch: 0.0
 model:
